[project]
name = "learn-ml-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=2.0.0",
    "fastapi>=0.95.0",
    "kafka-python>=2.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.22.0",
    "prefect>=2.0.0",
    "pymongo>=4.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests>=2.28.0",
    "scikit-learn>=1.0.0",
    "termcolor>=2.0.0",
    "torch>=2.0.0",
    "wandb>=0.13.0",
]
